# circuit-breaker-rs

./: AGENT.md  Cargo.toml  README.md
src/: breaker.rs  config.rs  health.rs  lib.rs  metrics.rs  state.rs
